--- a/www/index.html
+++ b/www/index.html
@@ -1,161 +1,210 @@
 <!doctype html>
 <html lang="en">
-<meta charset="UTF-8">
-<head>
-	<!-- Safe Software, 2013 -->
-	<!-- http://www.safe.com -->
 
-	<title>Easy Geocoder</title>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Safe Software, 2018 -->
+		<!-- http://www.safe.com -->
+		<title>Easy Geocoder</title>
+		<!-- JQuery -->
+		<script src="libs/jquery-3.3.1.min.js"></script>
+		<!-- Upload Library -->
+		<!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
+		<script src="libs/upload/js/vendor/jquery.ui.widget.js"></script>
+		<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+		<script src="libs/upload/js/jquery.iframe-transport.js"></script>
+		<!-- The basic File Upload plugin -->
+		<script src="libs/upload/js/jquery.fileupload.js"></script>
+		<!-- The File Upload UI plugin -->
+		<link rel="stylesheet" href="libs/upload/css/jquery.fileupload-ui.css">
+		<!-- Bootstrap -->
+		<script src="libs/bootstrap/js/bootstrap.js"></script>
+		<link href="libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+		<!-- Stylesheet for demo/tutorial -->
+		<link rel="stylesheet" href="css/index.css">
+		<!-- Icons -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+		<link rel="icon" href="/libs/img/favicon.ico" />
+		<!-- Generic server functions -->
+		<script src="js/FMEServer-v3.js"></script>
+		<!-- Demo-specific JavaScript -->
+		<script src="js/easyGeocoder.js"></script>
+		<!-- The following are Required for Mapbox Integration -->
+		<link href='https://api.tiles.mapbox.com/mapbox.js/v3.1.1/mapbox.css' rel='stylesheet' />
+		<script src='https://api.tiles.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
+	</head>
+	<body>
+		<header>
+			<div id="nav-top">
+				<div class="navbar-inner">
+					<div class="container">
+						<a href="http://www.safe.com/">safe.com</a>
+	      				<a href="http://blog.safe.com/">blog</a>
+	      				<a href="https://knowledge.safe.com/" class="text-white">knowledge</a>
+	      			</div>
+	      		</div>
+	      	</div>
+			<div class="navbar navbar-default navbar-static-top">
+				<div class="container">
+					<div class="navbar-header">
+						<div class="navbar-brand"><h1><a href="https://playground.fmeserver.com/demos/" class='text-white'>FME Server Demos</a><span class="hidden-tiny"> | Easy Geocoder</span></h1>
+						</div>
+					</div>
 
-	<!-- JQuery -->
-	<script src="libs/jquery-1.10.1.js"></script>
+					<ul class="nav justify-content-end">
+        				<li class="nav-item dropdown">
+        					<div class="container" id="navbarDropdown">
+        						<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+        						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          							<a class="dropdown-item" href="https://knowledge.safe.com/articles/Samples_and_Demos/EasyGeocoder-Data-Driven-Self-Serve-Data-Transformation">
+          									<i class="fas fa-book-open"></i>
+          									How-To Article</a>
+          							<a class="dropdown-item" href="https://github.com/safesoftware/fmepedia-easygeocoder">
+          									<i class="fas fa-code-branch"></i>
+          									Fork GitHub</a>
+          							<a class="dropdown-item" href="https://github.com/safesoftware/fmepedia-easygeocoder/archive/master.zip">
+          									<i class="fas fa-download"></i>
+          									Download Zip</a>
+          						</div>
+          					</div>
+          				</li>
+      				</ul>
+      			</div>
+      		</div>
+    	</header>
 
-	<!-- Upload Library -->
-	<!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-	<script src="libs/upload/js/vendor/jquery.ui.widget.js"></script>
-	<!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-	<script src="libs/upload/js/jquery.iframe-transport.js"></script>
-	<!-- The basic File Upload plugin -->
-	<script src="libs/upload/js/jquery.fileupload.js"></script>
-	<!-- The File Upload UI plugin -->
-	<link rel="stylesheet" href="libs/upload/css/jquery.fileupload-ui.css">
-
-	<!-- Bootstrap -->
-	<!--http://getbootstrap.com/2.3.2/-->
-	<script src="libs/bootstrap/js/bootstrap.js"></script>
-	<link href="libs/bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="libs/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
-
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&amp;sensor=false&amp;libraries=drawing"></script>
-
-
-	<!-- Stylesheet for demo/tutorial -->
-	<link rel="stylesheet" href="css/index.css">
-
-	<!-- Generic server functions -->
-	<script src="js/FMEServer.js" type="text/javascript"></script>
-
-	<!-- Demo-specific JavaScript -->
-	<script src="js/easyGeocoder.js" type="text/javascript"></script>
-
-</head>
-
-<body >
-
-	<div class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</a>
-
-			<div class="brand">FME Server<span class="hidden-tiny"> Demos</span></div>
-
-			<div class="nav-collapse collapse">
-				<a href="https://knowledge.safe.com/articles/Samples_and_Demos/EasyGeocoder-Data-Driven-Self-Serve-Data-Transformation" class="btn">
-					View KC article
-				</a>
-				<a href="http://playground.fmeserver.com/demos/" class="btn">
-					<img src="libs/server-icon.png"> View all Demos
-				</a>
-				<a href="https://github.com/safesoftware/fmepedia-easygeocoder" class="btn">
-					<img src="libs/GitHub.png"> Fork GitHub
-				</a>
-				<a href="https://github.com/safesoftware/fmepedia-easygeocoder/archive/master.zip" class="btn">
-					<i class="icon-download-alt"></i> Download Zip
-				</a>
-			</div>
-			<span class="hidden-phone" id="safe-ribbon"><a href="http://www.safe.com">Powered by FME</a></span>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
-	    <div id="content" class="form-horizontal">
-	    	<div>
-	    		<div class='title'>
-		    		<h1>Easy Geocoder</h1>
-		    	</div>
-		    	<p>
-					<p class='text-success'>
-						<strong>Step 1</strong> <br/> Upload a CSV file containing address data through this page. <br/> You can upload your own or download the sample file: <br/> <a href='http://demos.fmeserver.com/easygeocoder/download/SampleFile.csv'>SampleFile.csv</a>
-					</p>
+	    <div id="content">
+	    	<div class="title">
+		    	<h1>Address Geocoding</h1>
+		    </div>
+				<p class="center">
+					This demo geocodes a CSV file containing address information and displays it on a map. <br>
+					You can download our <a href='http://demos.fmeserver.com/easygeocoder/download/SampleFile.csv'>sample data</a> to use with the demo, or try it with your own.
 				</p>
-			</div>
-			<div id='dropzone' class='fade well well-large'>
-                <p id='dropText'>Click 'Add file' or drop your file here</p>
-                <br/>
 
-                <span class="btn btn-success fileinput-button" id='uploadBtn'>
-                <i class="icon-plus icon-white"></i>
-                <span>Add file...</span>
+			<div id='dropzone' class="card width-40">
+				<div class="card-body">
+                	<p id='dropText'>Click 'Add file' or drop your file here</p>
+                	<br>
+                </div>
+                <div class="card-body btn btn-secondary fileinput-button" id='uploadBtn'>
+                	<i class="fas fa-plus"></i>
+                	<span>Add file...</span>
                     <!-- The file input field used as target for the file upload widget -->
-                <input id="fileupload" type="file" name="files[]" multiple>
-                </span>
-            </div>
+                	<input id="fileupload" type="file" name="files[]" multiple>
+           		</div>
+			</div>
 		</div>
-	</div>
 
-	<div id="dropdowns">
-		<div id="geocodeFormDiv">
-			<div>
-				<h1 class='title'>Geocode Form</h1>
-				<p class='text-success'>
-					<strong>Step 2:</strong><br/>
+		<div id="dropdowns">
+			<div id="geocodeFormDiv">
+				<div class="title">
+					<h1>Geocode Form</h1>
+				</div>
+					<p class="center">
 					Select the CSV columns that correspond to each geocoding field:
-				</p>
-			</div>
-			<div id='backBtn'>
-				<button class='round-button' id='back' onClick='geocoder.backToUpload()'><i class='icon-chevron-left'></i></button>
-			</div>
-			<div id='form' class='form-horizontal'>
-				<div class="control-group">
-					<label class="control-label">Address: </label>
-					<div id="address" class="controls">
-						<select> </select>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">City: </label>
-					<div id="city" class="controls">
-						<select> </select>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">State/Province: </label>
-					<div id="state" class="controls">
-						<select> </select>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">Postal/Zip Code: </label>
-					<div id="postalcode" class="controls">
-						<select> </select>
-					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label">Country: </label>
-					<div id="country" class="controls">
-						<select> </select>
-					</div>
-				</div>
-				<div class="controls">
-					<button class='btn btn-success btn-large' id="displayMap" onClick="geocoder.displayMap()"><strong>Display Results</strong></button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id='mapPage'>
-		<div id='refreshBtn'>
-				<button class='round-button' id='back' onClick='geocoder.restart()'><i class='icon-refresh'></i></button>
-			</div>
-		<div id="mapDiv" class="map container">
-		</div>
-	</div>
-</body>
+					</p>
 
+				<form>
+					<div class="form-group">
+						<div class="row">
+							<div class="col">
+								<label for="address">Address:</label>
+							</div>
+							<div class="col">
+								<select class="form-control form-control-sm" id="address">
+								</select>
+							</div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							<div class="col">
+								<label for="city">City:</label>
+							</div>
+							<div class="col">
+								<select class="form-control form-control-sm" id="city">
+								</select>
+							</div>
+						</div>
+					</div>
+					
+					<div class="form-group">
+						<div class="row">
+							<div class="col">
+								<label for="state">State/Province:</label>
+							</div>
+							<div class="col">
+								<select class="form-control form-control-sm" id="state">
+								</select>
+							</div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							<div class="col">
+								<label for="postalcode">Postal/Zip Code:</label>
+							</div>
+							<div class="col">
+								<select class="form-control form-control-sm" id="postalcode">
+								</select>
+							</div>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<div class="row">
+							<div class="col">
+								<label for="country">Country:</label>
+							</div>
+							<div class="col">
+								<select class="form-control form-control-sm" id="country">
+								</select>
+							</div>
+						</div>
+					</div>
+				</form>
+
+				<div class="card width-20">
+					<div class="card-header">
+						<button class='btn btn-secondary  btn-block' id="displayMap" onClick="geocoder.displayMap()">
+						<i class="fas fa-map-marked-alt"></i>
+						<span class='hidden-tiny'>Geocode</span>
+						</button>
+					</div>
+			
+					<div class="card-footer">
+						<button class='btn btn-secondary btn-block' onClick='geocoder.backToUpload()'><i class="fas fa-chevron-left"></i>
+						<span class="hidden-tiny">Go Back...</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id='mapPage'>
+			<div class="container">
+				<div class="title">
+					<h1>Results</h1>
+				</div>
+			</div>
+			<div id="mapDiv" class="card map container"></div>
+			<div id="refreshBtn" class="card width-20">
+				<div class="card-header">
+					<button class='btn btn-secondary btn-block btn-sm' onClick='geocoder.restart()'><i class="fas fa-undo"></i>
+						<span class="hidden-tiny">Start Over...</span>
+					</button>
+				</div>
+			</div>
+		</div>
+		
+    	<footer class="footer">
+      		<div class="container">
+        		<p class="text-muted">Powered by <a href="https://www.safe.com/fme/fme-server/">FME Server. <img src="/libs/img/fme.png" class="fme" alt="FME"></a></p>
+      		</div>
+    	</footer>
+    </body>
 </html>
