syntax fix & minor changes to workspace and HTML

--- a/www/index.html
+++ b/www/index.html
@@ -130,7 +130,7 @@
 							</div>
 						</div>
 					</div>
-					
+
 					<div class="form-group">
 						<div class="row">
 							<div class="col">
@@ -175,7 +175,7 @@
 						<span class='hidden-tiny'>Geocode</span>
 						</button>
 					</div>
-			
+
 					<div class="card-footer">
 						<button class='btn btn-secondary btn-block' onClick='geocoder.backToUpload()'><i class="fas fa-chevron-left"></i>
 						<span class="hidden-tiny">Go Back...</span>
@@ -200,10 +200,10 @@
 				</div>
 			</div>
 		</div>
-		
+
     	<footer class="footer">
       		<div class="container">
-        		<p class="text-muted">Powered by <a href="https://www.safe.com/fme/fme-server/">FME Server. <img src="/libs/img/fme.png" class="fme" alt="FME"></a></p>
+        		<p class="text-muted">Powered by <a href="https://www.safe.com/">FME. <img src="/libs/img/fme.png" class="fme" alt="FME"></a></p>
       		</div>
     	</footer>
     </body>
