--- a/www/index.html
+++ b/www/index.html
@@ -203,7 +203,7 @@
 
     	<footer class="footer">
       		<div class="container">
-        		<p class="text-muted">Powered by <a href="https://www.safe.com/">FME. <img src="/libs/img/fme.png" class="fme" alt="FME"></a></p>
+        		<p class="text-muted">Powered by <a href="https://www.safe.com/">FME. <img src="libs/img/fme.png" class="fme" alt="FME"></a></p>
       		</div>
     	</footer>
     </body>
