Updating http links to https

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Safe Software, 2018 -->
-		<!-- http://www.safe.com -->
+		<!-- https://www.safe.com -->
 		<title>Easy Geocoder</title>
 		<!-- JQuery -->
 		<script src="libs/jquery-3.3.1.min.js"></script>
@@ -39,8 +39,8 @@
 			<div id="nav-top">
 				<div class="navbar-inner">
 					<div class="container">
-						<a href="http://www.safe.com/">safe.com</a>
-	      				<a href="http://blog.safe.com/">blog</a>
+						<a href="https://www.safe.com/">safe.com</a>
+	      				<a href="https://blog.safe.com/">blog</a>
 	      				<a href="https://knowledge.safe.com/" class="text-white">knowledge</a>
 	      			</div>
 	      		</div>
@@ -80,7 +80,7 @@
 		    </div>
 				<p class="center">
 					This demo geocodes a CSV file containing address information and displays it on a map. <br>
-					You can download our <a href='http://demos.fmeserver.com/easygeocoder/download/SampleFile.csv'>sample data</a> to use with the demo, or try it with your own.
+					You can download our <a href='https://demos.fmeserver.com/easygeocoder/download/SampleFile.csv'>sample data</a> to use with the demo, or try it with your own.
 				</p>
 
 			<div id='dropzone' class="card width-40">
